--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,35 +1,60 @@
+.data-info-box.dataset .card-header {
+    padding-right: 7rem;
+}
+.data-info-box.dataset ul.subtitle-list li:first-child {
+    background: #ddd;
+    -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    height: 6rem;
+    position: absolute;
+    right: .5rem;
+    text-align: center;
+    top: .5rem;
+    width: 5.22rem;
+}
+.data-info-box.dataset img.catalogue-flag {
+    border: none !important;
+    display: block;
+    height: 3rem;
+    margin: 0 auto;
+    padding-top: 1rem;
+    width: 5.22rem;
+}
+
 .data-info-box.dataset[type=Pressemitteilung],
 .data-info-box.dataset[type=Webseite] {
-    background-color: #f33b1d10 !important;
     border-color: #f33b1d !important;
 }
 .data-info-box.dataset[type=Pressemitteilung]:hover,
 .data-info-box.dataset[type=Webseite]:hover {
-    background-color: #f33b1d28 !important;
+    background-color: #f33b1d10 !important;
+}
+.data-info-box.dataset[type=Pressemitteilung] ul.subtitle-list li:first-child,
+.data-info-box.dataset[type=Webseite] ul.subtitle-list li:first-child {
+    background: #f33b1d40;
+    border-color: #f33b1d !important;
 }
 .dataset-details-header[type=Pressemitteilung] img.catalogue-flag,
 .data-info-box.dataset[type=Pressemitteilung] img.catalogue-flag,
 .dataset-details-header[type=Webseite] img.catalogue-flag,
 .data-info-box.dataset[type=Webseite] img.catalogue-flag {
-    border: none !important;
     content: url('wiki-berlin.svg');
-    height: 1.25rem;
-    width: 0.7623rem;
 }
 
 .data-info-box.dataset[type=Twitter] {
-    background-color: #1D9BF020 !important;
     border-color: #1D9BF0 !important;
 }
 .data-info-box.dataset[type=Twitter]:hover {
-    background-color: #1D9BF040 !important;
+    background-color: #1D9BF010 !important;
+}
+.data-info-box.dataset[type=Twitter] ul.subtitle-list li:first-child {
+    background: #1D9BF040;
+    border-color: #1D9BF0 !important;
 }
 .dataset-details-header[type=Twitter] img.catalogue-flag,
 .data-info-box.dataset[type=Twitter] img.catalogue-flag {
-    border: none !important;
     content: url('fa-twitter.svg');
-    height: 1.25rem;
-    width: 1.25rem;
+    width: 1.8rem;
 }
 
 div[type=Artikel] .badge,
