--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,3 +1,35 @@
+header {
+    position: sticky;
+    top: 0;
+    z-index: 1020;
+}
+header.border-bottom {
+    border-bottom: none !important;
+}
+header.mb-3 {
+    margin-bottom: 0 !important;
+}
+header nav.navbar {
+    -webkit-backdrop-filter: saturate(200%) blur(30px);
+    backdrop-filter: saturate(200%) blur(30px);
+    background-color: hsla(0,0%,100%,.8) !important;
+    border-radius: 40px;
+    box-shadow: 0 .3125rem .625rem 0 rgba(0,0,0,.12) !important;
+    left: 0 !important;
+    margin: 1rem 1.5rem 1rem 1.5rem !important;
+    padding: 0.5rem 1rem !important;
+    position: absolute !important;
+    right: 0 !important;
+    top: 0 !important;
+    z-index: 3 !important;
+}
+
+.content-wrapper {
+    padding-top: 5.5rem;
+}
+
+/* ------------------ */
+
 .data-info-box.dataset .card-header {
     padding-right: 7rem;
 }
