--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,7 +1,7 @@
 header {
     position: sticky;
     top: 0;
-    z-index: 1020;
+    z-index: 1024;
 }
 header.border-bottom {
     border-bottom: none !important;
@@ -10,18 +10,40 @@ header.mb-3 {
     margin-bottom: 0 !important;
 }
 header nav.navbar {
-    -webkit-backdrop-filter: saturate(200%) blur(30px);
-    backdrop-filter: saturate(200%) blur(30px);
-    background-color: hsla(0,0%,100%,.8) !important;
-    border-radius: 40px;
-    box-shadow: 0 .3125rem .625rem 0 rgba(0,0,0,.12) !important;
+    -webkit-backdrop-filter: saturate(175%) blur(.3rem);
+    backdrop-filter: saturate(175%) blur(.3rem);
+    background-color: rgba(255,255,255,.8) !important;
+    border-radius: 5rem;
+    box-shadow: 0 .3rem .7rem 0 rgba(0,0,0,.1) !important;
     left: 0 !important;
     margin: 1rem 1.5rem 1rem 1.5rem !important;
     padding: 0.5rem 1rem !important;
     position: absolute !important;
     right: 0 !important;
     top: 0 !important;
-    z-index: 3 !important;
+    z-index: 5 !important;
+}
+header nav.navbar > .container-fluid {
+    padding: 0 0 0 1.5rem;
+}
+header nav.navbar .navbar-brand {
+    color: #344767;
+    font-size: .875rem;
+    font-weight: 700 !important;
+    letter-spacing: -0.03rem;
+    margin: 0 1rem !important;
+    padding: .6rem 0;
+}
+@media (min-width: 992px) {
+    header nav.navbar .navbar-brand {
+        margin-left: 0 !important;
+    }
+}
+header nav.navbar .nav-link {
+    color: #344767;
+    font-size: .875rem;
+    font-weight: 400;
+    padding: .5rem 1rem;
 }
 
 .content-wrapper {
