--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5,6 +5,31 @@ body {
 
 /* ------------------ */
 
+header nav.navbar,
+.dataset-facets .facet-field .list-group {
+    box-shadow: 0 .3rem .7rem 0 rgba(0,0,0,.1) !important;
+}
+
+header nav.navbar .nav-link {
+    color: #344767;
+    font-size: .875rem;
+    font-weight: 400;
+}
+
+.dataset-facets .list-group-item {
+    color: #344767;
+    font-size: .875rem;
+    font-weight: 600;
+}
+
+header nav.navbar .navbar-brand {
+    color: #344767;
+    font-size: .875rem;
+    font-weight: 700 !important;
+}
+
+/* ------------------ */
+
 header {
     position: sticky;
     top: 0;
@@ -21,7 +46,6 @@ header nav.navbar {
     backdrop-filter: saturate(175%) blur(.3rem);
     background-color: rgba(255,255,255,.8) !important;
     border-radius: 5rem;
-    box-shadow: 0 .3rem .7rem 0 rgba(0,0,0,.1) !important;
     left: 0 !important;
     margin: 1rem 1.5rem 1rem 1.5rem !important;
     padding: 0.5rem 1rem !important;
@@ -34,9 +58,6 @@ header nav.navbar > .container-fluid {
     padding: 0 0 0 1.5rem;
 }
 header nav.navbar .navbar-brand {
-    color: #344767;
-    font-size: .875rem;
-    font-weight: 700 !important;
     letter-spacing: -0.03rem;
     margin: 0 1rem !important;
     padding: .6rem 0;
@@ -47,9 +68,6 @@ header nav.navbar .navbar-brand {
     }
 }
 header nav.navbar .nav-link {
-    color: #344767;
-    font-size: .875rem;
-    font-weight: 400;
     padding: .5rem 1rem;
 }
 
@@ -60,17 +78,62 @@ header nav.navbar .nav-link {
 /* ------------------ */
 
 .dataset-facets .facet-field .list-group {
-    border-radius: 0.5rem;
+    background: #fff;
+    border-radius: .5rem;
+    margin-right: .75rem;
+    padding-right: 0;
+}
+
+.dataset-facets .list-group-item {
+    border: none;
+    border-radius: 0;
+    border-top: 1px solid #dee2e6;
+    margin: 0 1rem;
+    padding: .5rem 0;
+    width: calc(100% - 2rem);
+}
+.dataset-facets .list-group-item-action:focus,
+.dataset-facets .list-group-item-action:hover {
+    background: #ff008018;
+    margin: 0;
+    padding: .5rem 1rem;
+    width: 100%;
+}
+.dataset-facets .list-group-item-action.active {
+    background-color: #fff;
+    background-image: linear-gradient(310deg,#7928ca40,#ff008040);
+    background-position-x: 25%;
+    background-size: 150%;
+    border-color: #9c24b7;
+    color: #344767;
+    margin: 0;
+    padding: .5rem 1rem;
+    width: 100%;
+}
+
+.dataset-facets .facet-count {
+    background: #fff !important;
+    border: none !important;
+    border-radius: .5rem;
+    box-shadow: 0 0 0.3rem 0.1rem rgba(0,0,0,.1);
+}
+.dataset-facets .list-group-item-action.active .facet-count {
+    background: #cb0c9f !important;
+    box-shadow: none;
+    color: #fff !important;
 }
 
 .dataset-facets .facet-header-item {
     background-image: linear-gradient(310deg,#7928ca,#ff0080);
     background-position-x: 25%;
+    border-radius: 1rem 1rem 0 0 !important;
     background-size: 150%;
     border: 0;
     font-size: .75rem;
-    padding: .75rem 1.5rem;
+    margin: 0 !important;
+    padding: .75rem 1.5rem !important;
     text-align: center;
+    width: 100% !important;
 }
 .dataset-facets .facet-header-item .facet-title {
     color: #fff !important;
@@ -78,16 +141,21 @@ header nav.navbar .nav-link {
     text-transform: uppercase;
 }
 .dataset-facets button.btn-secondary {
-    background-image: linear-gradient(310deg,#141727,#3a416f);
-    background-position-x: 25%;
-    background-size: 150%;
-    border: 0;
-    color: #fff;
+    background: #fff;
+    border: 1px solid #cb0c9f;
+    border-radius: .5rem;
+    color: #cb0c9f;
     font-size: .75rem;
     letter-spacing: -0.03rem;
-    padding: .75rem 1.5rem;
+    padding: 0.5rem 2rem;
     text-align: center;
     text-transform: uppercase;
+}
+.dataset-facets button.btn-secondary:hover {
+    background: #ff008018;
+}
+.dataset-facets button.btn-secondary:focus {
+    box-shadow: inset 0 0 0 0.25rem #cb0c9f40;
 }
 
 /* ------------------ */
