style filter options

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,11 +1,14 @@
+/* ------------------ */
+/*   common: colors   */
+/* ------------------ */
+
 body {
     background-color: #f8f9fa!important;
     font-weight: 400;
 }
 
-/* ------------------ */
-
 header nav.navbar,
+.datasets section .filters-group,
 .dataset-facets .facet-field .list-group {
     box-shadow: 0 .3rem .7rem 0 rgba(0,0,0,.1) !important;
 }
@@ -26,6 +29,30 @@ header nav.navbar .navbar-brand {
     color: #344767;
     font-size: .875rem;
     font-weight: 700 !important;
+}
+
+.datasets section .dropdown-toggle.btn-secondary,
+.datasets section input.form-control {
+    background: #fff;
+    border-color: #d2d6da !important;
+    color: #495057;
+    font-size: .875rem;
+    font-weight: 400;
+    line-height: 1.4rem;
+}
+.datasets section .dropdown-toggle.btn-secondary:focus,
+.datasets section .input-group button:focus,
+.datasets section .input-group-append button:focus,
+.datasets section input.form-control:focus {
+    border-color: #e293d3 !important;
+    outline: 0;
+    box-shadow: 0 0 0 2px #e9aede;
+}
+.datasets section .input-group-append button {
+    border-color: #d2d6da !important;
+}
+.dropdown-menu {
+    font-size: .875rem;
 }
 
 .dataset-facets .facet-header-item {
@@ -55,6 +82,22 @@ header nav.navbar .navbar-brand {
 }
 
 /* ------------------ */
+/*   common: cards    */
+/* ------------------ */
+
+.datasets section .filters-group,
+.dataset-facets .facet-field .list-group {
+    background: #fff;
+    border-radius: 1rem;
+}
+.datasets section .input-group .input-group-append button {
+    border-radius: 0 .5rem .5rem 0;
+    padding: .5rem;
+}
+
+/* ------------------ */
+/*       header       */
+/* ------------------ */
 
 header {
     position: sticky;
@@ -71,7 +114,7 @@ header nav.navbar {
     -webkit-backdrop-filter: saturate(175%) blur(.3rem);
     backdrop-filter: saturate(175%) blur(.3rem);
     background-color: rgba(255,255,255,.8) !important;
-    border-radius: 5rem;
+    border-radius: 1rem;
     left: 0 !important;
     margin: 1rem 1.5rem 1rem 1.5rem !important;
     padding: 0.5rem 1rem !important;
@@ -102,10 +145,10 @@ header nav.navbar .nav-link {
 }
 
 /* ------------------ */
+/*   dataset-facets   */
+/* ------------------ */
 
 .dataset-facets .facet-field .list-group {
-    background: #fff;
-    border-radius: 1rem;
     margin-right: .75rem;
     padding-right: 0;
 }
@@ -144,7 +187,8 @@ header nav.navbar .nav-link {
     letter-spacing: -0.03rem;
     text-transform: uppercase;
 }
-.dataset-facets button.btn-secondary {
+.dataset-facets button.btn-secondary,
+.datasets section .input-group button {
     background: #fff;
     border: 1px solid #cb0c9f;
     border-radius: .5rem;
@@ -155,8 +199,33 @@ header nav.navbar .nav-link {
     text-align: center;
     text-transform: uppercase;
 }
+.datasets section .input-group .input-group-append button svg {
+    font-size: .875rem !important;
+}
 .dataset-facets button.btn-secondary:focus {
     box-shadow: inset 0 0 0 0.25rem #cb0c9f40;
+}
+
+/* ------------------ */
+/* ------------------ */
+
+.datasets section {
+    padding-right: 1rem;
+}
+
+.datasets section .filters-group {
+    padding: 1rem;
+}
+
+.datasets section .filters-group > .row:first-child > .col {
+    justify-content: right !important;
+}
+
+.datasets section .dropdown-toggle.btn-secondary,
+.datasets section input.form-control {
+    border: 1px solid transparent;
+    border-radius: .5rem;
+    padding: .5rem .75rem;
 }
 
 /* ------------------ */
