--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9,6 +9,8 @@ body {
 
 header nav.navbar,
 .datasets section .filters-group,
+.datasets section > div:nth-child(2),
+.datasets section > div:nth-child(3),
 .dataset-facets .facet-field .list-group {
     box-shadow: 0 .3rem .7rem 0 rgba(0,0,0,.1) !important;
 }
@@ -19,8 +21,10 @@ header nav.navbar .nav-link {
     font-weight: 400;
 }
 
-.dataset-facets .list-group-item {
-    color: #344767;
+.dataset-facets .list-group-item,
+.datasets section > div:nth-child(2),
+.datasets section > div:nth-child(3) {
+        color: #344767;
     font-size: .875rem;
     font-weight: 600;
 }
@@ -55,6 +59,13 @@ header nav.navbar .navbar-brand {
     font-size: .875rem;
 }
 
+.dataset-facets .list-group-item-action.active .facet-count,
+.datasets section > div:nth-child(3) .badge {
+    background: #cb0c9f !important;
+    border-color: #cb0c9f !important;
+    color: #fff !important;
+}
+
 .dataset-facets .facet-header-item {
     background-image: linear-gradient(310deg,#7928ca,#ff0080);
     background-position-x: 25%;
@@ -86,7 +97,9 @@ header nav.navbar .navbar-brand {
 /* ------------------ */
 
 .datasets section .filters-group,
-.dataset-facets .facet-field .list-group {
+.dataset-facets .facet-field .list-group,
+.datasets section > div:nth-child(2),
+.datasets section > div:nth-child(3) {
     background: #fff;
     border-radius: 1rem;
 }
@@ -165,12 +178,7 @@ header nav.navbar .nav-link {
     background: #fff !important;
     border-color: #344767 !important;
     border-radius: .5rem;
-    color: #344767 !important;
-}
-.dataset-facets .list-group-item-action.active .facet-count {
-    background: #cb0c9f !important;
-    border-color: #cb0c9f !important;
-    color: #fff !important;
+    color: hsl(218, 33%, 30%) !important;
 }
 
 .dataset-facets .facet-header-item {
@@ -214,7 +222,8 @@ header nav.navbar .nav-link {
 }
 
 .datasets section .filters-group {
-    padding: 1rem;
+    border-radius: 1rem 1rem 0 0;
+    padding: 1rem 1rem 0 1rem;
 }
 
 .datasets section .filters-group > .row:first-child > .col {
@@ -226,6 +235,51 @@ header nav.navbar .nav-link {
     border: 1px solid transparent;
     border-radius: .5rem;
     padding: .5rem .75rem;
+}
+
+.datasets section > div:nth-child(2) {
+    border: none;
+    border-radius: 0;
+    margin-bottom: 0 !important;
+    margin-top: 0 !important;
+    padding: .5rem 1rem 0 1.875rem;
+}
+.datasets section > div:nth-child(2) > div.text-center {
+    flex: auto;
+}
+.datasets section > div:nth-child(2) > div.text-center > [role="status"] {
+    color: #cb0c9f !important;
+    font-size: 1.25rem;
+    height: 4rem;
+    margin: 2rem 0;
+    width: 4rem;
+}
+.datasets section > div > [role="status"] {
+    display: none;
+}
+
+.datasets section > div:nth-child(3) {
+    border: none;
+    border-radius: 0 0 1rem 1rem;
+    margin-top: 0 !important;
+    padding: 0 1rem 1rem 1rem;
+    position: relative;
+}
+.datasets section > div:nth-child(3) > p {
+    margin: 0;
+    padding: .5rem 0 0 0;
+}
+.datasets section > div:nth-child(3) > p > span:first-child {
+    font-weight: 400;
+    margin-right: -.25rem;
+    padding-left: .875rem;
+    vertical-align: middle;
+}
+.datasets section > div:nth-child(3) .badge {
+    margin-left: .25rem;
+}
+.datasets section > div:nth-child(3) .badge .close-facet {
+    vertical-align: bottom;
 }
 
 /* ------------------ */
