--- a/assets/custom.css
+++ b/assets/custom.css
@@ -12,7 +12,10 @@ header nav.navbar,
 .datasets section > div:nth-child(2),
 .datasets section > div:nth-child(3),
 .dataset-facets .facet-field .list-group,
-div[typeof="dcat:Dataset"] > div:first-child > div.row:first-child {
+div[typeof="dcat:Dataset"] > div:first-child > div.row:first-child,
+div[typeof="dcat:Dataset"] > div:first-child > div.row:nth-child(3),
+div[typeof="dcat:Dataset"] .description,
+div[typeof="dcat:Dataset"] .distributions {
     box-shadow: 0 .3rem .7rem 0 rgba(0,0,0,.1) !important;
 }
 
@@ -163,7 +166,10 @@ header nav.navbar .navbar-brand {
 .dataset-facets .facet-field .list-group,
 .datasets section > div:nth-child(2),
 .datasets section > div:nth-child(3),
-div[typeof="dcat:Dataset"] > div:first-child > div.row:first-child {
+div[typeof="dcat:Dataset"] > div:first-child > div.row:first-child,
+div[typeof="dcat:Dataset"] > div:first-child > div.row:nth-child(3),
+div[typeof="dcat:Dataset"] .description,
+div[typeof="dcat:Dataset"] .distributions {
     background: #fff;
     border-radius: 1rem;
 }
@@ -439,13 +445,54 @@ div[typeof="dcat:Dataset"] .distributions h3 .badge {
 /* ------------------ */
 
 div[typeof="dcat:Dataset"] {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
+div[typeof="dcat:Dataset"] h3 {
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+div[typeof="dcat:Dataset"] > div:first-child {
+    margin-bottom: 0 !important;
+}
 div[typeof="dcat:Dataset"] > div:first-child > div.row:first-child {
     margin: 0;
     padding: 1rem;
+}
+div[typeof="dcat:Dataset"] > div:first-child > div.row:nth-child(3) {
+    border-radius: 1rem 1rem 0 0;
+    font-size: .75rem;
+    margin: 2rem 0 0 0;
+    padding: 1rem 1rem 0 1rem;
+}
+div[typeof="dcat:Dataset"] > div:first-child > div.row:nth-child(3) .border-bottom span.d-inline-block {
+    font-weight: 800;
+    line-height: 2.5rem;
+}
+div[typeof="dcat:Dataset"] .border-bottom {
+    border-bottom-color: #cb0c9f !important;
+}
+
+div[typeof="dcat:Dataset"] .description {
+    border-radius: 0 0 1rem 1rem;
+    font-size: .75rem;
+    margin: 0 !important;
+    padding: 1rem;
+}
+
+div[typeof="dcat:Dataset"] .distributions {
+    margin: 1rem 0 0 0 !important;
+    padding: 1rem;
+}
+div[typeof="dcat:Dataset"] .distributions .row {
+    margin: 0;
+}
+div[typeof="dcat:Dataset"] .distributions ul {
+    border-top-color: #cb0c9f !important;
+    margin-bottom: 0;
+    padding: 0;
 }
 
 /* ------------------ */
