--- a/assets/custom.css
+++ b/assets/custom.css
@@ -15,7 +15,8 @@ header nav.navbar,
 div[typeof="dcat:Dataset"] > div:first-child > div.row:first-child,
 div[typeof="dcat:Dataset"] > div:first-child > div.row:nth-child(3),
 div[typeof="dcat:Dataset"] .description,
-div[typeof="dcat:Dataset"] .distributions {
+div[typeof="dcat:Dataset"] .distributions,
+div[typeof="dcat:Dataset"] .keywords {
     box-shadow: 0 .3rem .7rem 0 rgba(0,0,0,.1) !important;
 }
 
@@ -87,8 +88,9 @@ header nav.navbar .navbar-brand {
 
 .btn.btn-secondary,
 input.form-control,
+a > .rounded-pill,
 .pagination > li > button.page-link {
-    background: #fff;
+    background: #fff !important;
     border: 1px solid #cb0c9f;
     border-radius: .5rem;
     color: #cb0c9f !important;
@@ -104,15 +106,16 @@ input.form-control {
 }
 .pagination > li.active > button.page-link {
     background-color: #fff !important;
-    background-image: linear-gradient(310deg,#7928ca40,#ff008040);
-    background-position-x: 25%;
-    background-size: 150%;
+    background-image: linear-gradient(310deg,#7928ca40,#ff008040) !important;
+    background-position-x: 25% !important;
+    background-size: 150% !important;
     border-color: #cb0c9f !important;
     color: #cb0c9f !important;
 }
 
 .btn.btn-secondary:focus,
 input.form-control:focus,
+a > .rounded-pill:focus,
 .pagination > li > button.page-link:focus {
     background-color: #fff !important;
     border-color: #cb0c9f !important;
@@ -122,19 +125,20 @@ input.form-control:focus,
 
 .btn.btn-secondary:hover,
 input.form-control:hover,
+a > .rounded-pill:hover,
 .pagination > li > button.page-link:hover {
     background-color: #fff !important;
-    background-image: linear-gradient(310deg,#7928ca20,#ff008020);
-    background-position-x: 25%;
-    background-size: 150%;
+    background-image: linear-gradient(310deg,#7928ca20,#ff008020) !important;
+    background-position-x: 25% !important;
+    background-size: 150% !important;
     border-color: #cb0c9f !important;
     color: #cb0c9f !important;
 }
 .pagination > li.active > button.page-link:hover {
     background-color: #fff !important;
-    background-image: linear-gradient(310deg,#7928ca60,#ff008060);
-    background-position-x: 25%;
-    background-size: 150%;
+    background-image: linear-gradient(310deg,#7928ca60,#ff008060) !important;
+    background-position-x: 25% !important;
+    background-size: 150% !important;
     border-color: #cb0c9f !important;
     color: #cb0c9f !important;
 }
@@ -172,7 +176,8 @@ input.form-control:hover,
 div[typeof="dcat:Dataset"] > div:first-child > div.row:first-child,
 div[typeof="dcat:Dataset"] > div:first-child > div.row:nth-child(3),
 div[typeof="dcat:Dataset"] .description,
-div[typeof="dcat:Dataset"] .distributions {
+div[typeof="dcat:Dataset"] .distributions,
+div[typeof="dcat:Dataset"] .keywords {
     background: #fff;
     border-radius: 1rem;
 }
@@ -496,6 +501,12 @@ div[typeof="dcat:Dataset"] .distributions li small {
 div[typeof="dcat:Dataset"] .distributions li > span:first-child,
 div[typeof="dcat:Dataset"] .distributions li span.text-end {
     margin: auto 0 !important;
+}
+
+div[typeof="dcat:Dataset"] .keywords {
+    font-size: .75rem;
+    margin: 2rem 0 0 0 !important;
+    padding: 1rem;
 }
 
 /* ------------------ */
